# cpp_build_utils

./: .gitignore  README.md  cmake_gen.py  cproxy.bat  cproxy.py  cproxy.sh
default_cmake_proj/: CMakeLists.txt
default_cmake_proj/src/: CMakeLists.txt
default_cmgen_proj/: cmgen.json  doxygen.cfg
default_cmgen_proj/src/: main.cpp
extensions/: debug-warn.json  full-warn.json  release-ipo.json
